<resources>
    <string name="app_name">先每餐饮收银(重构版)</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="function_all">综合测试</string>
    <string name="function_qrcode">二维码</string>
    <string name="function_barcode">条形码</string>
    <string name="function_text">文字</string>
    <string name="function_tab">表格</string>
    <string name="function_pic">图片</string>
    <string name="function_multi">多线程</string>
    <string name="function_threeline">空打三行</string>
    <string name="function_blackline">黑标打印</string>
    <string name="append_account_tip_num">共%1$s件</string>
    <string name="append_good_num">商品数量：%1$s</string>
    <string name="append_item_good_total">零售价:￥%1$s</string>
    <string name="append_item_good_total_vip">会员价:￥%1$s</string>
    <string name="append_item_good_total_sao">合计: ￥%1$s</string>
    <string name="append_vip_not_vip_good_total">零售价￥%1$s</string>
    <string name="tip_paytype_to_pay_good">出示会员支付码或\n微信支付宝支付码</string>
    <string name="append_money">￥%1$s</string>
    <string name="append_down_time">倒计时：%1$s</string>
    <string name="setting_title">设置</string>
    <string name="info_title">打印机信息</string>
    <string name="qr_title">二维码打印测试</string>
    <string name="barcode_title">条形码打印测试</string>
    <string name="text_title">文字打印测试</string>
    <string name="bitmap_title">图片打印测试</string>
    <string name="append_account_moneys">零售价: %1$s/会员价: %2$s</string>
    <string name="tab_title">表格打印测试</string>
    <string name="all_title">综合测试</string>
    <string name="blackline_title">黑标打印测试</string>
    <string name="append_good_total">￥%1$s</string>
    <string name="printer_serial_num">打印机序列号</string>
    <string name="printer_model">打印机型号</string>
    <string name="printer_head">打印头型号</string>
    <string name="printer_firmware">打印机固件版本号</string>
    <string name="printer_head_size">打印机头尺寸</string>
    <string name="printer_distance">打印距离</string>
    <string name="printer_version">打印服务版本</string>
    <string name="printer_dev_version">打印服务开发版本</string>
    <string name="enter_work">进入事务打印</string>
    <string name="exit_work">退出事务打印</string>
    <string name="print_baidu_ticket">打印百度小票</string>
    <string name="print_meituan_ticket">打印美团小票</string>
    <string name="print_eleme_ticket">打印饿了么小票</string>
    <string name="print_koubei_ticket">打印口碑小票</string>
    <string name="print_interval_black">打印间断黑块</string>
    <string name="print_black">打印大黑块</string>
    <string name="print">打印</string>
    <string name="printing">打印中~~~</string>
    <string name="input_barcode">请输入条形码内容</string>
    <string name="content_barcode">条形码内容</string>
    <string name="encode_barcode">条形码编码</string>
    <string name="no_print">不打印文字</string>
    <string name="barcode_up">条形码上方</string>
    <string name="barcode_down">条形码下方</string>
    <string name="barcode_updown">条形码上下方</string>
    <string name="text_position">文字位置</string>
    <string name="barcode_height">条形码高度</string>
    <string name="barcode_width">条形码宽度</string>
    <string name="content_qrcode">二维码内容</string>
    <string name="input_qrcode">请输入二维码内容</string>
    <string name="array_qrcode">二维码排列方式</string>
    <string name="size_qrcode">二维码块大小</string>
    <string name="error_qrcode">二维码纠错等级</string>
    <string name="upload_info">上传打印信息</string>
    <string name="characterset">字符集</string>
    <string name="size_text">字体大小</string>
    <string name="type_text">文字字体</string>
    <string name="bold_text">加粗</string>
    <string name="underline_text">下划线</string>
    <string name="connect_method">连接方式</string>
    <string name="size_paper">纸张尺寸</string>
    <string name="print_density">打印浓度</string>
    <string name="add_line">新增一行</string>
    <string name="content_form">表格内容</string>
    <string name="weight_form">内容权重</string>
    <string name="align_form">对齐方式</string>
    <string name="align_left">居左</string>
    <string name="align_mid">居中</string>
    <string name="align_right">居右</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="about">关于</string>
    <string name="single">单个</string>
    <string name="twice">双个</string>
    <string name="connect_service">连接服务</string>
    <string name="disconnect_service">断开服务</string>
    <string name="bl_info1">黑标颜色要求：反射率不超过 6%，红外波长 700-1000nm 范围内。</string>
    <string name="bl_info2">黑标位置要求：黑标需要在纸张水平中间位置才能被传感器器检测到。</string>
    <string name="bl_info3">检测黑标：检测黑标的最长走纸距离为600mm.</string>
    <string name="bl_set">黑标设置</string>
    <string name="bl_check">黑标检测</string>
    <string name="bl_sample">黑标小票样张</string>
    <string name="toast_1">事务打印请使用Aidl模式!</string>
    <string name="toast_2">服务已断开!</string>
    <string name="toast_3">蓝牙设备不可用</string>
    <string name="toast_4">未检测到蓝牙设备，请打开蓝牙</string>
    <string name="toast_5">未发现InnterPrinter!</string>
    <string name="toast_6">蓝牙连接失败!</string>
    <string name="toast_7">AIDL 暂时只打印单个二维码</string>
    <string name="toast_8">两个二维码尺寸最大为7</string>
    <string name="toast_9">请设置打印机为黑标模式!</string>
    <string name="toast_10">条码类型或内容不正确!</string>
    <string name="input_order">请输入指令:</string>
    <string name="multithread">多线程并发打印</string>
    <string name="multithread_stop">点击停止</string>
    <string name="pic_pos">图片排列方式</string>
    <string name="pic_hor">横向</string>
    <string name="pic_ver">纵向</string>
    <string name="pic_mode">图片打印方式</string>
    <string name="pic_mode1">光栅位图</string>
    <string name="pic_mode2">8点单密度</string>
    <string name="pic_mode3">8点双密度</string>
    <string name="pic_mode4">24点单密度</string>
    <string name="pic_mode5">24点双密度</string>
    <string name="style_width">倍宽</string>
    <string name="style_height">倍高</string>
    <string name="about_content">PrinterHelper适用于sunmi系列\nPrinterHelper集成了AIDL和BLUETOOTH两种连接方式，并且提供一系列的打印测试模块，帮助开发者更快的接入sunmi打印功能。\n上传打印信息可以帮助sunmi更好的定位出现的问题。\n官网:http://www.sunmi.com\n开发者文档: http://docs.sunmi.com</string>
    <string name="text_instruction">说明：Sunmi打印字体是等宽字体，除支持常用Epson指令集设置字体结构外，还可以使用AIDL接口调用直接设置字体大小尺寸，测试demo仅使用后者设置字体大小，开发者有意可自己查阅相关Epson指令设置字体变化。\n注意：字符集的设置只影响指令打印不会影响AIDL打印文字，打印单字节字符集需要先设置单字节模式，Sunmi服务默认双字节模式！</string>
    <string name="text_print">欢迎光临(简体中文)\n歡迎光臨(繁体中文)\nWelcome(英文)\n어서 오세요.(韩文)\nいらっしゃいませ(日文)\nWillkommen in der(德文)\nSouhaits de bienvenue(法文)\nยินดีต้อนรับสู่(泰文)\nДобро пожаловать(俄文)\nBenvenuti a(意大利语)\nvítejte v(捷克文)\nBEM - vindo Ao(葡萄牙文)\nمرحبا بكم في(阿拉伯语)\n</string>
    <string name="table_instruction">说明：蓝牙打印表格只提供例子及打印效果测试，具体方法可参考epson指令集。</string>
    <string name="append_print_store_name">门店：%1$s</string>
    <string name="append_print_num">牌号：%1$s</string>
    <string name="append_print_address">地址：%1$s</string>
    <string name="append_print_phone">电话：%1$s</string>
    <string name="append_print_net">网址：%1$s</string>
    <string name="append_print_board_info">设备编号: %1$s</string>
    <string name="append_print_order_sn">订单编号：%1$s</string>
    <string name="append_print_time">订单时间：%1$s</string>
    <string name="append_print_good_info">%1$s                             %2$s            %3$s            %4$s</string>
    <string name="append_print_good_info2">%1$s     %2$s    %3$s    %4$s    %5$s</string>
    <string name="append_print_total_num">总件数：%1$s</string>
    <string name="append_print_total_num_money">总件数：%1$s             支付：%2$s</string>
    <string name="append_print_vip_info_id_score">会员号：%1$s</string>
    <string name="append_print_pay_money">支付：%1$s</string>
    <string name="append_pring_real">付款方式：%1$s</string>
    <string name="append_print_reduce">开通VIP可为您节省%1$s元</string>
    <string name="append_print_vip_reduce">本单已为您节省%1$s元</string>
    <string name="append_print_vip_code">会员号：%1$s</string>
    <string name="append_print_vip_score">获得积分：%1$s</string>
    <string name="append_print_vip_code_score">会员号：%1$s                             获得积分：%2$s</string>
    <string name="append_print_fav">优惠券：%1$s</string>
    <string name="update_title_info">我们升级呢！</string>
    <string name="update_content_info">1.更新内容；\n2.更新内容啦；\n3.更新内容，赶紧查看；\n1.更新内容；\n2.更新内容啦；\n3.更新内容，赶紧查看；1.更新内容；\n2.更新内容啦；\n3.更新内容，赶紧查看；1.更新内容；\n2.更新内容啦；\n3.更新内容，赶紧查看；</string>
    <string name="update_info">立即更新</string>
    <string name="update_next">下次再说</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="goods_detail_spinner_category">请选择商品分类</string>
    <string name="goods_detail_spinner_unit">请选择商品单位</string>
    <string name="goods_detail_spinner_group">请选择商品群组</string>
    <string name="goods_sale_spinner_group">请选择商品类型</string>
    <string name="connect_fail">连接失败</string>
    <string name="active_disconnected">断开了</string>
    <string name="disconnected">连接断开</string>
    <string name="scan_setting">在下面你可以配置需要扫描的设备的条件，可以为空</string>
    <string name="setting_name">输入蓝牙设备广播名</string>
    <string name="setting_mac">输入蓝牙设备mac地址</string>
    <string name="setting_uuid">输入蓝牙设备UUID，多个之间以英文逗号隔开</string>
    <string name="start_scan">开始扫描</string>
    <string name="customactivityoncrash_error_activity_error_occurred_explanation">发生意外错误。\n抱歉，给您带来不便。</string>
    <string name="customactivityoncrash_error_activity_restart_app">重新启动</string>
    <string name="customactivityoncrash_error_activity_close_app">关闭程序</string>
    <string name="customactivityoncrash_error_activity_error_details">错误日志</string>
    <string name="customactivityoncrash_error_activity_error_details_title">错误详情</string>
    <string name="customactivityoncrash_error_activity_error_details_close">关闭</string>
    <string name="customactivityoncrash_error_activity_error_details_copy">复制日志</string>
    <string name="customactivityoncrash_error_activity_error_details_copied">复制日志</string>
    <string name="customactivityoncrash_error_activity_error_details_clipboard_label">错误信息</string>
    <string name="newly_added">新增</string>
    <string name="select_member">选择会员</string>
    <string name="deselect_member">取消选择</string>
    <string name="order_num">单号：</string>
    <string name="member">会员：</string>
    <string name="remarks">备注：</string>
    <string name="common">共 </string>
    <string name="piece"> 件</string>
    <string name="rmb">￥</string>
    <string name="pen_num">笔</string>
    <string name="payment_method">支付方式：</string>
    <string name="community_edit">商品编辑</string>
    <string name="community_add">新增商品</string>
    <string name="preservation">保存</string>
    <string name="sales_record">销售统计</string>
    <string name="modify">修改</string>
    <string name="Textnull"> </string>
    <string name="set_screen">副屏设置</string>
    <string name="set_account">账号设置</string>
    <string name="about_us">关于我们</string>
    <string name="set_blue">蓝牙设置</string>
    <string name="empty">清空</string>
    <string name="empty_goods">清空(%1$s)</string>
    <string name="hanging_order">挂单</string>
    <string name="take_order">取单</string>
    <string name="format_bag">袋</string>
    <string name="co_distribution">共配货</string>
    <string name="pieces_of_goods">件商品</string>
    <string name="creation_time">创建时间</string>
    <string name="paragraph">款</string>
    <string name="no_goods_sold_out">暂无沽清商品</string>
    <string name="dian">.</string>
    <string name="commodity_category">商品种类：</string>
    <string name="order_quantity">&#160;&#160;订货数量：</string>
    <string name="total_amount">&#160;&#160;总金额：</string>
    <string name="user_balance">余额：</string>
    <string name="bar">&#160;-&#160;</string>
    <string name="custom_recharge">自定义充值</string>
    <string name="finish_recharge">返回充值列表</string>
</resources>